fix: now the boxes are not misaligned when being checked

--- a/themes/default/css/template2.css
+++ b/themes/default/css/template2.css
@@ -405,9 +405,9 @@ input[type="checkbox"] {
     margin: 0px 9px 0px;
 }
 
-input[type="checkbox"]:checked {
+/* input[type="checkbox"]:checked {
     margin: 0px 9px 0px 0px;
-}
+} */
 
 @font-face {
     font-family: 'icone-tag';
